環境構築/husky_eslint_prettier

--- a/src/backend/tsconfig.json
+++ b/src/backend/tsconfig.json
@@ -6,8 +6,7 @@
     "lib": ["ES2015","DOM"],
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "rootDir": ".",
+    "rootDir": "../",
     "outDir": "../../extension",
   },
-  "include": ["."]
 }
