--- a/src/content/tsconfig.json
+++ b/src/content/tsconfig.json
@@ -6,14 +6,13 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "composite": true,
-    "rootDir": ".",
+    "rootDir": "../",
     "outDir": "../../extension",
 
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
   },
-  "include": ["."],
 }
