--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dev": "vite",
     "tsc": "npx tsc -b",
     "build": "tsc && vite build",
-    "export": "npm run build && npm run tsc",
+    "export": "vite build && npm run tsc",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepare": "husky install"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -31,13 +32,13 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "husky": "^8.0.0",
     "postcss": "^8.4.24",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.4",
-    "vite-tsconfig-paths": "^4.2.0",
-    "husky": "^8.0.0"
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
