--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,16 +2,26 @@
   "manifest_version": 3,
   "name": "question_post_to_discord",
   "version": "1.0",
-  "permissions": [
-    "activeTab",
-    "tabs",
-    "nativeMessaging"
-  ],
+  "permissions": ["activeTab", "tabs", "nativeMessaging", "declarativeNetRequest", "declarativeNetRequestWithHostAccess"],
+  "minimum_chrome_version": "100",
   "action": {
     "title": "question_post_to_discord"
   },
   "background": {
-    "service_worker": "backend/background.js"
+    "service_worker": "content/background.js"
+  },
+  "declarative_net_request": {
+    "rule_resources": [
+      {
+        "id": "ruleset",
+        "enabled": true,
+        "path": "ruleset.json"
+      }
+    ]
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' http://localhost:53134/*; object-src 'self'",
+    "sandbox": "sandbox allow-scripts allow-forms allow-popups allow-modals; script-src 'self' 'unsafe-inline' 'unsafe-eval'; child-src 'self';"
   },
   "content_scripts": [
     {
