--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "discord.js": "^14.11.0",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
