--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepare": "husky install",
-    "serve": "nodemon src/backend/oauth2.cjs"
+    "serve": "nodemon src/backend/oauth2.cjs",
+    "restart": "forever restart src/backend/oauth2.cjs"
   },
   "dependencies": {
     "cors": "^2.8.5",
